--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
 body{
-    background: white;
+    background: lightgray;
+    text-align: center;
+    font-size: x-large;
+    padding-top: 100px;
 }
